--- a/.github/workflows/tieba.yml
+++ b/.github/workflows/tieba.yml
@@ -1,5 +1,3 @@
-# 每天6:30执行
-# UTC 时间，北京时间需要 UTC+8
 name: Start
 
 on:
@@ -9,7 +7,6 @@ on:
 
 jobs:
   TiebaSignIn:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +14,8 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        distribution: 'temurin'  # or 'zulu', 'corretto', etc.
+        java-version: '8'       # Note: Use '8' instead of '1.8'
     - name: Cache local Maven repository
       uses: actions/cache@v3
       with:
