--- a/.github/workflows/tieba.yml
+++ b/.github/workflows/tieba.yml
@@ -1,31 +1,33 @@
-name: Start
-
-on:
-   workflow_dispatch:
-   schedule:
-       - cron: '10 0 * * *'
-
 jobs:
   TiebaSignIn:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'  # or 'zulu', 'corretto', etc.
-        java-version: '8'       # Note: Use '8' instead of '1.8'
-    - name: Cache local Maven repository
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    - name: Build with Maven
-      env:
-        BDUSS: ${{ secrets.BDUSS }}
-        SCKEY: ${{ secrets.SCKEY }}
-      run: |
-        mvn compile exec:java -Dexec.mainClass="top.srcrs.Run" -Dexec.args="${BDUSS} ${SCKEY}"
+      - uses: actions/checkout@v4
+
+      - name: Cache Maven and build output
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: |
+            ~/.m2/repository
+            target/
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '8'
+
+      - name: Build only if cache missed
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: mvn package
+
+      - name: Run the application
+        env:
+          BDUSS: ${{ secrets.BDUSS }}
+          SCKEY: ${{ secrets.SCKEY }}
+        run: |
+          # 动态匹配 JAR 文件（推荐）
+          JAR_FILE=$(ls target/*.jar | head -n 1)
+          java -jar "$JAR_FILE" "${BDUSS}" "${SCKEY}"
