--- a/.github/workflows/tieba.yml
+++ b/.github/workflows/tieba.yml
@@ -1,10 +1,18 @@
+name: Run Tieba SignIn
+
+on:
+  workflow_dispatch:  # 允许手动触发
+  schedule:
+    - cron: '10 0 * * *'  # 每天 UTC 0:10（北京时间 8:10）自动运行
+
 jobs:
   TiebaSignIn:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      - name: Cache Maven and build output
+      - name: Cache Maven dependencies and build output
         uses: actions/cache@v3
         id: cache
         with:
@@ -13,7 +21,7 @@ jobs:
             target/
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
-      - name: Set up JDK
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -28,6 +36,5 @@ jobs:
           BDUSS: ${{ secrets.BDUSS }}
           SCKEY: ${{ secrets.SCKEY }}
         run: |
-          # 动态匹配 JAR 文件（推荐）
           JAR_FILE=$(ls target/*.jar | head -n 1)
           java -jar "$JAR_FILE" "${BDUSS}" "${SCKEY}"
