--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     tags:
-      - 'v*'  # 打标签时触发（如 git tag -a v1.0 -m "Release" && git push --tags）
+      - 'v*'
 
 jobs:
   build:
@@ -21,23 +21,23 @@ jobs:
       - name: Build with Maven
         run: mvn clean package
 
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # 自动拥有权限
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/TiebaSignIn-1.0-SNAPSHOT-jar-with-dependencies.jar
-          asset_name: TiebaSignIn.jar  # 重命名为简洁名称
-          asset_content_type: application/java-archive
-
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref_name }}  # 使用推送的标签（如 v1.0）
+          tag_name: ${{ github.ref_name }}
           release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}  # 关键修复点
+          asset_path: target/TiebaSignIn-1.0-SNAPSHOT-jar-with-dependencies.jar
+          asset_name: TiebaSignIn.jar
+          asset_content_type: application/java-archive
