--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -19,7 +19,16 @@ jobs:
           java-version: '8'
 
       - name: Build with Maven
-        run: mvn clean package
+        run: |
+          mvn clean package
+          ls -la target/  # 列出target目录确认文件
+
+      - name: Find JAR file
+        id: find_jar
+        run: |
+          JAR_PATH=$(ls target/*-jar-with-dependencies.jar)
+          echo "JAR_PATH=${JAR_PATH}" >> $GITHUB_OUTPUT
+          echo "Found JAR at: ${JAR_PATH}"
 
       - name: Create Release
         id: create_release
@@ -37,7 +46,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}  # 关键修复点
-          asset_path: target/TiebaSignIn-1.0-SNAPSHOT-jar-with-dependencies.jar
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ steps.find_jar.outputs.JAR_PATH }}
           asset_name: TiebaSignIn.jar
           asset_content_type: application/java-archive
