--- a/.github/workflows/Build and Release.yml
+++ b/.github/workflows/Build and Release.yml
@@ -1,3 +1,4 @@
+# .github/workflows/build-and-release.yml
 name: Build and Release
 
 on:
@@ -11,48 +12,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '8'
 
-      - name: Build with Maven
+      - name: Build fat JAR
         run: |
-          mvn clean package
-          ls -la target/  # 调试：列出所有生成文件
-
-      - name: Find JAR file
-        id: find_jar
-        run: |
-          # 查找所有可能的JAR文件
-          JAR_PATH=$(find target/ -name '*.jar' ! -name '*-original.jar' | head -1)
-          if [ -z "$JAR_PATH" ]; then
-            echo "::error::No JAR file found in target directory!"
-            ls -la target/
-            exit 1
-          fi
-          echo "JAR_PATH=${JAR_PATH}" >> $GITHUB_OUTPUT
-          echo "Found JAR at: ${JAR_PATH}"
+          mvn clean compile assembly:single
+          ls -la target/*.jar
 
       - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        uses: actions/upload-release-asset@v1
+          files: target/*-jar-with-dependencies.jar
+          body: "包含所有依赖的可执行JAR"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ steps.find_jar.outputs.JAR_PATH }}
-          asset_name: TiebaSignIn.jar
-          asset_content_type: application/java-archive
